--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "rsbuild preview"
   },
   "devDependencies": {
-    "@rsbuild/core": "^0.1.5"
+    "@rsbuild/core": "^0.1.5",
+    "purescript": "^0.15.13",
+    "spago": "^0.21.0"
   }
 }
