--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@rsbuild/core": "^0.1.5",
     "purescript": "^0.15.13",
     "spago": "^0.21.0"
+  },
+  "dependencies": {
+    "@node-frp/core": "^0.0.5"
   }
 }
